ai-gateway/nim/nim-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nim-llama3-1-8b
  namespace: gloo-system
spec:
  parentRefs:
    - name: ai-gateway
      namespace: gloo-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v1/chat/completions
    filters:
    - extensionRef:
        group: gateway.solo.io
        kind: RouteOption
        name: nim-llama3-1-8b-options
      type: ExtensionRef
    backendRefs:
    - name: nim-llama3-1-8b
      namespace: gloo-system
      group: gloo.solo.io
      kind: Upstream
