ai-gateway/nim/nim-moderation-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nemoguard-8b-content-safety
  namespace: gloo-system
spec:
  parentRefs:
    - name: ai-gateway
      namespace: gloo-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /moderations
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /v1/chat/completions
    backendRefs:
    - name: nemoguard-8b-content-safety
      namespace: gloo-system
      group: gloo.solo.io
      kind: Upstream
